[Task-7] - Remove describe and list
