# internal/model/equipment_request.go
@@ -2,6 +2,9 @@ package model
 
 import (
 	"database/sql"
+	"errors"
+	pb "github.com/ozonmp/bss-equipment-request-api/pkg/bss-equipment-request-api"
+	"google.golang.org/protobuf/encoding/protojson"
 	"time"
 )
 
@@ -34,4 +37,28 @@ const (
 
 func (es EquipmentRequestStatus) String() string {
 	return string(es)
+}
+
+// Scan EquipmentRequestEventPayload
+func (e *EquipmentRequest) Scan(src interface{}) (err error) {
+	var eqp pb.EquipmentRequestPayload
+
+	switch src.(type) {
+	case string:
+		err = protojson.Unmarshal([]byte(src.(string)), &eqp)
+	case []byte:
+		err = protojson.Unmarshal(src.([]byte), &eqp)
+	default:
+		return errors.New("incompatible type for EquipmentRequest")
+	}
+
+	if err != nil {
+		return err
+	}
+
+	request := ConvertPbToEquipmentRequestPayload(&eqp)
+
+	*e = *request
+
+	return nil
 }
