# internal/service/equipment_request/equipment_request.go
@@ -19,9 +19,7 @@ type service struct {
 
 // ServiceInterface is a interface for equipment request service
 type ServiceInterface interface {
-	DescribeEquipmentRequest(ctx context.Context, equipmentRequestID uint64) (*model.EquipmentRequest, error)
 	CreateEquipmentRequest(ctx context.Context, equipmentRequest *model.EquipmentRequest) (uint64, error)
-	ListEquipmentRequest(ctx context.Context, limit uint64, offset uint64) ([]model.EquipmentRequest, error)
 	RemoveEquipmentRequest(ctx context.Context, equipmentRequestID uint64) (bool, error)
 	CheckExistsEquipmentRequest(ctx context.Context, equipmentRequestID uint64) (bool, error)
 	UpdateEquipmentIDEquipmentRequest(ctx context.Context, equipmentRequestID uint64, equipmentID uint64) (bool, error)
@@ -43,9 +41,6 @@ var ErrNoExistsEquipmentRequest = errors.New("equipment request with this id doe
 // ErrNoCreatedEquipmentRequest is a "unable to create equipment request" error
 var ErrNoCreatedEquipmentRequest = errors.New("unable to create equipment request")
 
-// ErrNoListEquipmentRequest is a "unable to get list of equipment requests" error
-var ErrNoListEquipmentRequest = errors.New("unable to get list of equipment requests")
-
 // ErrNoRemovedEquipmentRequest is a "unable to remove equipment request" error
 var ErrNoRemovedEquipmentRequest = errors.New("unable to remove equipment request")
 
@@ -54,18 +49,6 @@ var ErrNoUpdatedEquipmentIDEquipmentRequest = errors.New("unable to update equip
 
 // ErrNoUpdatedStatusEquipmentRequest is a "unable to update status of equipment request" error
 var ErrNoUpdatedStatusEquipmentRequest = errors.New("unable to update status of equipment request")
-
-func (s service) DescribeEquipmentRequest(ctx context.Context, equipmentRequestID uint64) (*model.EquipmentRequest, error) {
-	span, ctx := opentracing.StartSpanFromContext(ctx, "service.DescribeEquipmentRequest")
-	defer span.Finish()
-
-	equipmentRequest, err := s.requestRepository.DescribeEquipmentRequest(ctx, equipmentRequestID)
-	if err != nil {
-		return nil, errors.Wrap(err, "repository.DescribeEquipmentRequest")
-	}
-
-	return equipmentRequest, nil
-}
 
 func (s service) CreateEquipmentRequest(ctx context.Context, equipmentRequest *model.EquipmentRequest) (uint64, error) {
 	span, ctx := opentracing.StartSpanFromContext(ctx, "service.CreateEquipmentRequest")
@@ -104,22 +87,6 @@ func (s service) CreateEquipmentRequest(ctx context.Context, equipmentRequest *m
 	}
 
 	return createdRequestID, nil
-}
-
-func (s service) ListEquipmentRequest(ctx context.Context, limit uint64, offset uint64) ([]model.EquipmentRequest, error) {
-	span, ctx := opentracing.StartSpanFromContext(ctx, "service.ListEquipmentRequest")
-	defer span.Finish()
-
-	equipmentRequests, err := s.requestRepository.ListEquipmentRequest(ctx, limit, offset)
-	if err != nil {
-		return nil, errors.Wrap(err, "repository.ListEquipmentRequest")
-	}
-
-	if equipmentRequests == nil {
-		return nil, ErrNoListEquipmentRequest
-	}
-
-	return equipmentRequests, nil
 }
 
 func (s service) CheckExistsEquipmentRequest(ctx context.Context, equipmentRequestID uint64) (bool, error) {
