# pkg/bss-equipment-request-api/bss_equipment_request_api_grpc.pb.go
@@ -18,12 +18,8 @@ const _ = grpc.SupportPackageIsVersion7
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
 type BssEquipmentRequestApiServiceClient interface {
-	// DescribeEquipmentRequestV1 - Describe a equipment request
-	DescribeEquipmentRequestV1(ctx context.Context, in *DescribeEquipmentRequestV1Request, opts ...grpc.CallOption) (*DescribeEquipmentRequestV1Response, error)
 	// CreateEquipmentRequestV1 - Create a new equipment request
 	CreateEquipmentRequestV1(ctx context.Context, in *CreateEquipmentRequestV1Request, opts ...grpc.CallOption) (*CreateEquipmentRequestV1Response, error)
-	// ListEquipmentRequestV1 - Get list of all equipment requests
-	ListEquipmentRequestV1(ctx context.Context, in *ListEquipmentRequestV1Request, opts ...grpc.CallOption) (*ListEquipmentRequestV1Response, error)
 	// RemoveEquipmentRequestV1 - Remove one equipment request
 	RemoveEquipmentRequestV1(ctx context.Context, in *RemoveEquipmentRequestV1Request, opts ...grpc.CallOption) (*RemoveEquipmentRequestV1Response, error)
 	// UpdateEquipmentIDEquipmentRequestV1 - Update equipment id of equipment request (as a example of task4.5 "Реализовать поддержку вариаций типов событий на обновление сущности")
@@ -40,27 +36,9 @@ func NewBssEquipmentRequestApiServiceClient(cc grpc.ClientConnInterface) BssEqui
 	return &bssEquipmentRequestApiServiceClient{cc}
 }
 
-func (c *bssEquipmentRequestApiServiceClient) DescribeEquipmentRequestV1(ctx context.Context, in *DescribeEquipmentRequestV1Request, opts ...grpc.CallOption) (*DescribeEquipmentRequestV1Response, error) {
-	out := new(DescribeEquipmentRequestV1Response)
-	err := c.cc.Invoke(ctx, "/ozonmp.bss_equipment_request_api.v1.BssEquipmentRequestApiService/DescribeEquipmentRequestV1", in, out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
 func (c *bssEquipmentRequestApiServiceClient) CreateEquipmentRequestV1(ctx context.Context, in *CreateEquipmentRequestV1Request, opts ...grpc.CallOption) (*CreateEquipmentRequestV1Response, error) {
 	out := new(CreateEquipmentRequestV1Response)
 	err := c.cc.Invoke(ctx, "/ozonmp.bss_equipment_request_api.v1.BssEquipmentRequestApiService/CreateEquipmentRequestV1", in, out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-func (c *bssEquipmentRequestApiServiceClient) ListEquipmentRequestV1(ctx context.Context, in *ListEquipmentRequestV1Request, opts ...grpc.CallOption) (*ListEquipmentRequestV1Response, error) {
-	out := new(ListEquipmentRequestV1Response)
-	err := c.cc.Invoke(ctx, "/ozonmp.bss_equipment_request_api.v1.BssEquipmentRequestApiService/ListEquipmentRequestV1", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -98,12 +76,8 @@ func (c *bssEquipmentRequestApiServiceClient) UpdateStatusEquipmentRequestV1(ctx
 // All implementations must embed UnimplementedBssEquipmentRequestApiServiceServer
 // for forward compatibility
 type BssEquipmentRequestApiServiceServer interface {
-	// DescribeEquipmentRequestV1 - Describe a equipment request
-	DescribeEquipmentRequestV1(context.Context, *DescribeEquipmentRequestV1Request) (*DescribeEquipmentRequestV1Response, error)
 	// CreateEquipmentRequestV1 - Create a new equipment request
 	CreateEquipmentRequestV1(context.Context, *CreateEquipmentRequestV1Request) (*CreateEquipmentRequestV1Response, error)
-	// ListEquipmentRequestV1 - Get list of all equipment requests
-	ListEquipmentRequestV1(context.Context, *ListEquipmentRequestV1Request) (*ListEquipmentRequestV1Response, error)
 	// RemoveEquipmentRequestV1 - Remove one equipment request
 	RemoveEquipmentRequestV1(context.Context, *RemoveEquipmentRequestV1Request) (*RemoveEquipmentRequestV1Response, error)
 	// UpdateEquipmentIDEquipmentRequestV1 - Update equipment id of equipment request (as a example of task4.5 "Реализовать поддержку вариаций типов событий на обновление сущности")
@@ -117,14 +91,8 @@ type BssEquipmentRequestApiServiceServer interface {
 type UnimplementedBssEquipmentRequestApiServiceServer struct {
 }
 
-func (UnimplementedBssEquipmentRequestApiServiceServer) DescribeEquipmentRequestV1(context.Context, *DescribeEquipmentRequestV1Request) (*DescribeEquipmentRequestV1Response, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method DescribeEquipmentRequestV1 not implemented")
-}
 func (UnimplementedBssEquipmentRequestApiServiceServer) CreateEquipmentRequestV1(context.Context, *CreateEquipmentRequestV1Request) (*CreateEquipmentRequestV1Response, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method CreateEquipmentRequestV1 not implemented")
-}
-func (UnimplementedBssEquipmentRequestApiServiceServer) ListEquipmentRequestV1(context.Context, *ListEquipmentRequestV1Request) (*ListEquipmentRequestV1Response, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method ListEquipmentRequestV1 not implemented")
 }
 func (UnimplementedBssEquipmentRequestApiServiceServer) RemoveEquipmentRequestV1(context.Context, *RemoveEquipmentRequestV1Request) (*RemoveEquipmentRequestV1Response, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method RemoveEquipmentRequestV1 not implemented")
@@ -149,24 +117,6 @@ func RegisterBssEquipmentRequestApiServiceServer(s grpc.ServiceRegistrar, srv Bs
 	s.RegisterService(&BssEquipmentRequestApiService_ServiceDesc, srv)
 }
 
-func _BssEquipmentRequestApiService_DescribeEquipmentRequestV1_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(DescribeEquipmentRequestV1Request)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(BssEquipmentRequestApiServiceServer).DescribeEquipmentRequestV1(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: "/ozonmp.bss_equipment_request_api.v1.BssEquipmentRequestApiService/DescribeEquipmentRequestV1",
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(BssEquipmentRequestApiServiceServer).DescribeEquipmentRequestV1(ctx, req.(*DescribeEquipmentRequestV1Request))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
 func _BssEquipmentRequestApiService_CreateEquipmentRequestV1_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(CreateEquipmentRequestV1Request)
 	if err := dec(in); err != nil {
@@ -181,24 +131,6 @@ func _BssEquipmentRequestApiService_CreateEquipmentRequestV1_Handler(srv interfa
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(BssEquipmentRequestApiServiceServer).CreateEquipmentRequestV1(ctx, req.(*CreateEquipmentRequestV1Request))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-func _BssEquipmentRequestApiService_ListEquipmentRequestV1_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(ListEquipmentRequestV1Request)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(BssEquipmentRequestApiServiceServer).ListEquipmentRequestV1(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: "/ozonmp.bss_equipment_request_api.v1.BssEquipmentRequestApiService/ListEquipmentRequestV1",
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(BssEquipmentRequestApiServiceServer).ListEquipmentRequestV1(ctx, req.(*ListEquipmentRequestV1Request))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -265,16 +197,8 @@ var BssEquipmentRequestApiService_ServiceDesc = grpc.ServiceDesc{
 	HandlerType: (*BssEquipmentRequestApiServiceServer)(nil),
 	Methods: []grpc.MethodDesc{
 		{
-			MethodName: "DescribeEquipmentRequestV1",
-			Handler:    _BssEquipmentRequestApiService_DescribeEquipmentRequestV1_Handler,
-		},
-		{
 			MethodName: "CreateEquipmentRequestV1",
 			Handler:    _BssEquipmentRequestApiService_CreateEquipmentRequestV1_Handler,
-		},
-		{
-			MethodName: "ListEquipmentRequestV1",
-			Handler:    _BssEquipmentRequestApiService_ListEquipmentRequestV1_Handler,
 		},
 		{
 			MethodName: "RemoveEquipmentRequestV1",
